Add denormalized event projection endpoint with embedded tier details in session seating maps